back to project some adjustments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
-  <div class="col col-md-2  col-xs-1" id="side-content">
+  <div id="side-content">
     <app-sidebar></app-sidebar>
   </div>
-  <div class="col col-md-10" id="content">
+  <div id="content">
     <app-headbar></app-headbar>
     <section id="router-content">
       <router-outlet></router-outlet>
