--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -1,20 +1,6 @@
 <div class="container-fluid" id="nav">
     <div id="brand" [routerLink]="['/']">
         <i class="fas fa-dice fa-5x"></i>
-        <p>Dailly Sort</p>
-    </div>
-    <div class="nav-itens">
-        <div class="nav-item sub-item" [routerLink]="['sort/single']"  routerLinkActive="active">
-            <p>
-                <i class="fas fa-dice"></i>
-                Sorteio Único
-            </p>
-        </div>
-        <!-- <div class="nav-item sub-item" [routerLink]="['sort/weekly']" routerLinkActive="active">
-            <p>
-                <i class="fas fa-calendar-week"></i>
-                Sorteio Semanal
-            </p>
-        </div> -->
+        <p>Daily Sort</p>
     </div>
 </div>
