--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,10 +2,12 @@
     display: flex;
     padding: 0;
     height: 100vh;
+
     #side-content {
         background: var(--dark);
         border-left: 10px solid #6f4dc0;
         height: 100%;
+        width: 20rem;
         padding: 0;
     }
     #content {
@@ -13,6 +15,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
+        padding: 0 0 0 2rem;
         #router-content {
             height: 94%;
             width: 100%;
