--- a/src/app/participants/components/list/list.component.html
+++ b/src/app/participants/components/list/list.component.html
@@ -1,10 +1,10 @@
-<div class="row" id="tb-act"  *ngIf="showParticipants">
+<div class="row" id="tb-act">
     <button class="btn btn-primary">
         <i class="fas user-plus"></i> Novo Participante
     </button>
 </div>
 <div class="row" id="tb-warp">
-<table class="table" *ngIf="showParticipants">
+<table class="table">
     <thead>
         <tr>
             <th>ID</th>
