--- a/src/app/shared/layout/headbar/headbar.component.html
+++ b/src/app/shared/layout/headbar/headbar.component.html
@@ -1,5 +1,5 @@
 <nav class="headbar">
-    <button type="button" class="btn btn-primary" (click)="showParticipants()">
-        <i class="fas fa-dice"></i> Participantes
-    </button>
+<!--    <button type="button" class="btn btn-primary" (click)="showParticipants()">-->
+<!--        <i class="fas fa-dice"></i> Participantes-->
+<!--    </button>-->
 </nav>
