--- a/src/app/sort/components/sigle/sigle.component.scss
+++ b/src/app/sort/components/sigle/sigle.component.scss
@@ -7,10 +7,9 @@
     overflow: auto;
     width: 100%;
     section {
-        margin: 20px;
+        margin: 2rem;
         padding: 0;
         .card {
-            cursor: pointer;
             height: 250px;
             text-align: center;
             color: #fff;
