--- a/src/app/sort/components/sigle/sigle.component.scss
+++ b/src/app/sort/components/sigle/sigle.component.scss
@@ -6,8 +6,15 @@
     display: flex;
     overflow: auto;
     width: 100%;
+    @media (min-width: 768px) {
+        .col-md-1 {
+            display: block !important;
+            max-width: none!important;
+        }
+    }
     section {
-        margin: 2rem;
+        margin: 20px;
+        display: block !important;
         padding: 0;
         .card {
             height: 250px;
