--- a/src/app/sort/components/sigle/sigle.component.html
+++ b/src/app/sort/components/sigle/sigle.component.html
@@ -32,8 +32,7 @@
         <i class="fas fa-dice" ></i>
         Próximo
     </button>
-<!--    <button class="btn btn-dark" *ngIf="sortStarted && participants.length > 0" (click)="reset()">-->
-<!--        <i class="fas fa-dice" ></i>-->
-<!--        Reiniciar-->
-<!--    </button>-->
+    <button class="btn btn-dark" *ngIf="presenters.length > 0" (click)="reset()">
+        Reiniciar
+    </button>
 </div>
