--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -3,4 +3,9 @@
         <i class="fas fa-dice fa-5x"></i>
         <p>Daily Sort</p>
     </div>
+    <div id="actions">
+        <div class="action">
+            <a class="action-link" routerLink="sort/single"  routerLinkActive="active"> Sorteio Diário</a>
+        </div>
+    </div>
 </div>
