--- a/src/app/sort/sort.component.html
+++ b/src/app/sort/sort.component.html
@@ -1,3 +1,6 @@
+    <div id="participants">
+        {{participantsQtd}} Participantes
+    </div>
     <div id="page-content">
         <router-outlet></router-outlet>
     </div>
