--- a/src/app/sort/sort.component.scss
+++ b/src/app/sort/sort.component.scss
@@ -3,4 +3,13 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    overflow-y: auto;
+    padding: 60px 0;
+}
+
+#participants {
+    display: flex;
+    width: 100%;
+    text-align: right;
+    justify-content: flex-end;
 }
