--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -5,7 +5,16 @@
     </div>
     <div id="actions">
         <div class="action">
-            <a class="action-link" routerLink="sort/single"  routerLinkActive="active"> Sorteio Diário</a>
+            <a class="action-link" routerLink="sort/single"
+               routerLinkActive="active">
+                <i class="fas fa-dice" routerLinkActive="active"></i> Sorteio
+            </a>
+        </div>
+        <div class="action">
+            <a class="action-link" routerLink="scrun-poker"
+               routerLinkActive="active">
+                <i class="fa-solid fa-heart" routerLinkActive="active"></i> Scrum poker
+            </a>
         </div>
     </div>
 </div>
