--- a/src/app/sort/components/sigle/sigle.component.scss
+++ b/src/app/sort/components/sigle/sigle.component.scss
@@ -2,10 +2,11 @@
 #card-zone  {
     align-items: center;
     justify-content: center;
+    background: #343A40;
     display: flex;
     overflow: auto;
-    padding-top: 20%;
     height: 100%;
+    border-radius: 7px;
     box-sizing: border-box;
     width: 100%;
     @media (min-width: 768px) {
