--- a/src/app/shared/layout/headbar/headbar.component.scss
+++ b/src/app/shared/layout/headbar/headbar.component.scss
@@ -4,7 +4,7 @@
     flex-direction: row;
     justify-content: flex-end;
     min-height: 6%;
-    padding: 10px 10px 10px 10px;
+    padding-top: 10px;
     width: 100%;
     
     button {
