--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -16,5 +16,23 @@
                 <i class="fa-solid fa-heart" routerLinkActive="active"></i> Scrum poker
             </a>
         </div>
+        <div class="action-divider">
+            <div class="identifier">
+                Configurações
+                <span class="bottom-detail"></span>
+            </div>
+        </div>
+        <div class="config-container">
+            <div class="action">
+                <a class="action-link">
+                    Atividades do poker
+                </a>
+            </div>
+            <div class="action">
+                <a class="action-link">
+                  Equipes
+                </a>
+            </div>
+        </div>
     </div>
 </div>
