--- a/src/app/shared/layout/sidebar/sidebar.component.scss
+++ b/src/app/shared/layout/sidebar/sidebar.component.scss
@@ -51,36 +51,61 @@
         height: 47em;
         overflow-y: auto;
         flex-direction: column;
-        .action {
-            margin-bottom: 0;
-            height: 10%;
-            align-items: center;
-            justify-content: left;
-            display: flex;
-            width: 100%;
-            a {
-                i {
-                    margin-right: 10px;
-                    font-size: 24px;
-                }
-                i.active {
-                    color: #7550cb;
-                }
-                height: 100%;
-                text-decoration: none;
-                color: #fff;
-                display: flex;
-                align-items: center;
-                width: 100%;
-                padding-left: 10px;
-            }
-        }
-        .action:has(a.active),
-        .action:hover {
-            cursor: pointer;
-        }
-        a.active {
-            background: #000000;
-        }
      } 
+}
+.action-divider {
+    margin-top: 10px;
+    padding-left: 5px;
+    .identifier {
+        display: flex;
+        flex-direction: column;
+        .bottom-detail {
+            height: 2px;
+            border: 4px solid #7550cb;
+            display: flex;
+            width: 20%;
+            border-radius: 10px;
+        }
+    }
+}
+.action {
+    margin-bottom: 0;
+    height: 10%;
+    align-items: center;
+    justify-content: left;
+    display: flex;
+    width: 100%;
+    a {
+        i {
+            margin-right: 10px;
+            font-size: 24px;
+        }
+        i.active {
+            color: #7550cb;
+        }
+        height: 100%;
+        text-decoration: none;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        width: 100%;
+        padding-left: 10px;
+    }
+}
+.action:has(a.active),
+.action:hover {
+    cursor: pointer;
+}
+a.active {
+    background: #000000;
+}
+.config-container {
+    padding-top: 2em;
+    margin-top: 5px;
+    background: #272b30;
+    display: flex;
+    flex-direction: column;
+    * {
+        margin-bottom: 25px;
+    }
 }
