--- a/src/app/sort/components/scrum-poker/scrum-poker.component.html
+++ b/src/app/sort/components/scrum-poker/scrum-poker.component.html
@@ -17,5 +17,10 @@
                 <i class="fas fa-calendar"></i>
             </div>
         </div>
+        <div class="poker-card finished">
+            <div class="row">
+                <i class="fas fa-calendar"></i>
+            </div>
+        </div>
     </div>
 </div>
