--- a/src/app/shared/layout/headbar/headbar.component.html
+++ b/src/app/shared/layout/headbar/headbar.component.html
@@ -1,2 +1,10 @@
 <nav class="headbar">
+    <div>
+        <button type="button" class="btn-primary">
+            Cadastrar-se
+        </button>
+        <a type="button">
+            Entrar
+        </a>
+    </div>
 </nav>
