--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
         <i class="fas fa-dice fa-5x"></i>
         <p>Daily Sort</p>
     </div>
-    <div id="actions">
+    <div id="actions" *ngIf="showMenu">
         <div class="action">
             <a class="action-link" routerLink="sort/single"
                routerLinkActive="active">
