login and register base views

--- a/src/app/start/components/login/login.component.html
+++ b/src/app/start/components/login/login.component.html
@@ -1,1 +1,13 @@
-<p>login works!</p>
+<div class="login-container">
+    <div class="form-container">
+        <div class="row">
+            <a class="back" (click)="goBack()">
+                <i class="fa-solid fa-arrow-left-long"></i>
+            </a>
+        </div>
+        <div class="row f-center f-column">
+            <p class="title">Bem vindo!</p>
+            <p class="sub-title">Realize login para acessar o sistema</p>
+        </div>
+    </div>
+</div>
