--- a/src/app/start/components/register/register.component.html
+++ b/src/app/start/components/register/register.component.html
@@ -1,1 +1,13 @@
-<p>register works!</p>
+<div class="login-container">
+    <div class="form-container">
+        <div class="row">
+            <a class="back" (click)="goBack()">
+                <i class="fa-solid fa-arrow-left-long"></i>
+            </a>
+        </div>
+        <div class="row f-center f-column">
+            <p class="title">Cadastro</p>
+            <p class="sub-title">Preecha o formulário abaixo para criar seu acesso do sitema</p>
+        </div>
+    </div>
+</div>
