--- a/src/app/start/components/login/login.component.html
+++ b/src/app/start/components/login/login.component.html
@@ -9,5 +9,19 @@
             <p class="title">Bem vindo!</p>
             <p class="sub-title">Realize login para acessar o sistema</p>
         </div>
+        <span class="area-padding"></span>
+        <div class="row">
+            <label>Login</label>
+            <input class="form-text"/>
+        </div>
+        <div class="row">
+            <label>Senha</label>
+            <input class="form-text" type="password"/>
+        </div>
+        <div class="row">
+            <button class="btn-primary btn-l" (click)="doLogin()">
+                Entrar
+            </button>
+        </div>
     </div>
 </div>
