--- a/src/app/start/components/register/register.component.html
+++ b/src/app/start/components/register/register.component.html
@@ -9,5 +9,8 @@
             <p class="title">Cadastro</p>
             <p class="sub-title">Preecha o formulário abaixo para criar seu acesso do sitema</p>
         </div>
+        <div class="row">
+            <input class="form-text"/>
+        </div>
     </div>
 </div>
