--- a/src/app/start/components/login/login.component.scss
+++ b/src/app/start/components/login/login.component.scss
@@ -7,15 +7,38 @@
   justify-content: flex-start;
   align-items: center;
   .form-container {
+    * {
+      box-sizing: border-box;
+    }
+    align-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    overflow: auto;
     background-color: white;
-    height: 100%;
+    min-height: 80%;
     width: 50%;
     border-radius: 15px;
-    padding: 20px 45px ;
+    padding: 20px 25px ;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
     .row {
+      box-sizing: border-box;
       display: flex;
       width: 100%;
+      align-items: center;
+      input {
+        width: 100%;
+        margin-bottom: 10px;
+        height: 30px;
+        border: none;
+        border-bottom: 1px solid var(--primary);
+        color: var(--primary);
+        outline: none;
+      }
+      label {
+        font-size: 15px;
+      }
     }
   }
 }
@@ -42,4 +65,12 @@
   font-size: 15px;
   font-weight: lighter;
   color: black;
+}
+.area-padding {
+  padding-bottom: 5%;
+}
+.btn-l {
+  width: 100%;
+  border-radius: 5px;
+  height: 40px;
 }
