--- a/src/app/start/components/register/register.component.html
+++ b/src/app/start/components/register/register.component.html
@@ -9,8 +9,31 @@
             <p class="title">Cadastro</p>
             <p class="sub-title">Preecha o formulário abaixo para criar seu acesso do sitema</p>
         </div>
+        <span class="area-padding"></span>
         <div class="row">
+            <label>Nome</label>
             <input class="form-text"/>
+        </div>
+        <div class="row">
+            <label>E-mail</label>
+            <input class="form-text"/>
+        </div>
+        <div class="row">
+            <label>Login</label>
+            <input class="form-text"/>
+        </div>
+        <div class="row">
+            <label>Senha</label>
+            <input class="form-text" type="password"/>
+        </div>
+        <div class="row">
+            <label>Confirme a senha</label>
+            <input class="form-text" type="password"/>
+        </div>
+        <div class="row">
+            <button class="btn-primary btn-l">
+                Cadastrar
+            </button>
         </div>
     </div>
 </div>
