--- a/src/app/start/components/login/login.component.scss
+++ b/src/app/start/components/login/login.component.scss
@@ -4,7 +4,7 @@
   height: 100%;
   width: 100%;
   padding: 100px 4rem;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   .form-container {
     * {
@@ -15,7 +15,7 @@
     box-sizing: border-box;
     overflow: auto;
     background-color: white;
-    min-height: 80%;
+    min-height: 70%;
     width: 50%;
     border-radius: 15px;
     padding: 20px 25px ;
@@ -23,8 +23,6 @@
     display: flex;
     flex-direction: column;
     .row {
-      box-sizing: border-box;
-      display: flex;
       width: 100%;
       align-items: center;
       input {
@@ -73,4 +71,7 @@
   width: 100%;
   border-radius: 5px;
   height: 40px;
+}
+.font-l {
+  font-weight: normal;
 }
