--- a/src/app/start/components/register/register.component.scss
+++ b/src/app/start/components/register/register.component.scss
@@ -3,22 +3,44 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
-  padding: 100px 4rem;
+  padding: 80px 4rem;
   justify-content: flex-start;
   align-items: center;
   .form-container {
+    * {
+      box-sizing: border-box;
+    }
+    align-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    overflow: auto;
     background-color: white;
     height: 100%;
     width: 50%;
     border-radius: 15px;
-    padding: 20px 45px ;
+    padding: 20px 25px ;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
     .row {
+      box-sizing: border-box;
       display: flex;
       width: 100%;
-    }
-    .input {
+      align-items: center;
+      input {
+        width: 100%;
+        margin-bottom: 10px;
+        height: 30px;
+        border: none;
+        border-bottom: 1px solid var(--primary);
+        color: var(--primary);
+        outline: none;
+      }
+      label {
+        font-size: 15px;
+        margin: 0;
 
+      }
     }
   }
 }
@@ -29,7 +51,6 @@
 }
 .f-center {
   justify-content: center;
-  text-align: right;
 }
 .f-center.f-column {
   align-items: center;
@@ -46,5 +67,15 @@
   font-size: 15px;
   font-weight: lighter;
   color: black;
-  text-align: center;
+}
+.area-padding {
+  padding-bottom: 5%;
+}
+.btn-l {
+  width: 100%;
+  border-radius: 5px;
+  height: 40px;
+}
+.font-l {
+  font-weight: normal;
 }
