--- a/src/app/start/components/login/login.component.html
+++ b/src/app/start/components/login/login.component.html
@@ -6,6 +6,11 @@
             </a>
         </div>
         <div class="row f-center f-column">
+            <p class="title">
+                <i class="fa-regular fa-circle-user"></i>
+            </p>
+        </div>
+        <div class="row f-center f-column">
             <p class="title">Bem vindo!</p>
             <p class="sub-title">Realize login para acessar o sistema</p>
         </div>
