--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
             </a>
         </div>
         <div class="action">
-            <a class="action-link" routerLink="sort/poker"
+            <a class="action-link" routerLink="sort/poker/list"
                routerLinkActive="active">
                 <i class="fa-solid fa-heart" routerLinkActive="active"></i> Scrum poker
             </a>
