--- a/src/app/sort/components/sigle/sigle.component.html
+++ b/src/app/sort/components/sigle/sigle.component.html
@@ -1,12 +1,22 @@
-<div class="row" *ngIf="showSpin">
-    <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#6610f2" type = "ball-zig-zag" [fullScreen]="false"><p style="color: #fff" > Sorteando</p></ngx-spinner>
+<div id="actions" [class.centered]="!sortStarted">
+    <button class="btn btn-success" *ngIf="!sortStarted" (click)="sort()">
+        <i class="fas fa-dice" ></i>
+        Iniciar Sorteio
+    </button>
+    <button class="btn btn-dark" *ngIf="participants.length <= 0" (click)="reset()">
+        Reiniciar
+    </button>
+    <button class="btn btn-dark" *ngIf="sortStarted && participants.length > 0" (click)="sort()">
+        Próximo
+        <i class="fas fa-chevron-right" ></i>
+    </button>
 </div>
-<div class="row" id="card-zone" *ngIf="showCards" (click)="slide($event)">
+<div id="card-zone" *ngIf="showCards" (click)="slide($event)">
     <section class="col col-md-1"  *ngFor="let participant of presenters">
         <div class="card" id="admin" *ngIf="presenters.indexOf(participant) == 0;">
             <div class="card-title">
-                <i class="fas fa-user-circle fa-3x"></i>
-                <p>Condutor</p>
+                <i class="fas fa-diamond fa-3x"></i>
+                <p>1ª Apresentação</p>
             </div>
             <div class="card-body">
                 <p>{{participant.name}}</p>
@@ -14,7 +24,7 @@
         </div>
         <div class="card"  *ngIf="presenters.indexOf(participant) != 0;">
             <div class="card-title">
-                <i class="fas fa-user-circle fa-3x"></i>
+                <i class="fas fa-heart fa-3x"></i>
                 <p>{{presenters.indexOf(participant) + 1}}ª Apresentação</p>
             </div>
             <div class="card-body">
@@ -22,17 +32,4 @@
             </div>
         </div>
     </section>
-</div>
-<div class="row" id="actions">
-    <button class="btn btn-success" *ngIf="!sortStarted" (click)="sort()">
-        <i class="fas fa-dice" ></i>
-        Iniciar Sorteio
-    </button>
-    <button class="btn btn-dark" *ngIf="sortStarted && participants.length > 0" (click)="sort()">
-        <i class="fas fa-dice" ></i>
-        Próximo
-    </button>
-    <button class="btn btn-dark" *ngIf="presenters.length > 0" (click)="reset()">
-        Reiniciar
-    </button>
 </div>
