--- a/src/app/shared/layout/headbar/headbar.component.html
+++ b/src/app/shared/layout/headbar/headbar.component.html
@@ -7,7 +7,7 @@
             Entrar <i class="fa-solid fa-arrow-right-to-bracket"></i>
         </a>
     </div>
-    <div *ngIf="!showLogin">
+    <div *ngIf="!showLogin && isLoggedIn">
         <a (click)="signOut()">
             Sair <i class="fa-solid fa-arrow-right-from-bracket"></i>
         </a>
