--- a/src/app/sort/components/sigle/sigle.component.scss
+++ b/src/app/sort/components/sigle/sigle.component.scss
@@ -3,9 +3,10 @@
     align-items: center;
     justify-content: center;
     background: #343A40;
-    display: flex;
-    overflow: auto;
-    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    overflow: hidden;
+    min-height: 500px;
     border-radius: 7px;
     box-sizing: border-box;
     width: 100%;
@@ -25,6 +26,7 @@
             color: #fff;
             background: var(--primary);
             width: 180px;
+            border-radius: 7px;
             .card-title {
                 padding-top: 15px;
             }
@@ -69,11 +71,16 @@
     background: var(--dark);
 }
 #actions {
-    justify-content: center;
+    justify-content: flex-end;
+    display: flex;
+    width: 100%;
     button {
         font-weight: bold;
         margin: 5px;
     }
+}
+#actions.centered{
+    justify-content: center;
 }
 .card {
     border-radius: 20px;
