--- a/src/app/sort/sort.component.scss
+++ b/src/app/sort/sort.component.scss
@@ -1,7 +1,10 @@
 #page-content {
+    width: 100%;
+        overflow-x: hidden;
+    align-items: center;
+    padding: 10px;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    overflow-y: auto;
-    padding: 60px 0;
+}
+#router-content {
+    height: 100%;
 }
